Refactor to a more functional way